          Release Notes for NEdit Version 5.5, October 2004


$Id: ReleaseNotes,v 1.60 2008/03/03 15:54:42 tringali Exp $

This file contains last minute notes to users about the release, which are not
included in the documentation or README files included with the distribution
kits.  It also contains change information, for users who are interested in
what bugs have been fixed, and what features have been added in the current
version.

If you are upgrading NEdit from a version prior to 5.0, please see the notes in
the README file which came with the (source or executable) distribution kit,
about updating macros and font settings in your .nedit file.

New Features in $NEXT_VERSION

  - The macro variable $VERSION returns NEdit's version number.

  - The new macro function filename_dialog() can be used to query a file
    name from the user by using the usual file selection dialog.


Bugs fixed in $NEXT_VERSION

  - Fix for SF bug #1730611: $match_syntax_based is not set.

  - Crash on window close when a "File modified externally" dialog was up
    (SF bug #1578869).

  - Crashes and artifacts when using ARGB visuals (SF bugs #1579544, 
    #1030467, #1030192, and #1458006).

  - The text insertion cursor does no longer blink while typing
    (SF bug #906878).

  - The status bar reflects a changed keybinding in the shell command banner.

  - There is now a pattern for highlighting nested command substitution in
    shell scripts (SF patch #1010742).

  - Duplicate display bugs SF#464967 and SF#1041077 are fixed.

  - A typo in Ada's syntax highlighting patterns is fixed (SF bug #858874).

  - The shell used to run programs from the shell_command() macro function
    and from the Shell menu is now part of NEdit's normal settings, and no
    longer in the X server's settings. It also defaults to the user's login
    shell, not /bin/csh. This fixes SF#403738 and SF#880607.

  - File history is now consistent across multiple sessions (SF bug #557032).
