@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.60 2008/03/03 15:54:42 tringali Exp $
+$Id: ReleaseNotes,v 1.61 2008/03/06 17:24:22 edg Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -22,6 +22,8 @@ New Features in $NEXT_VERSION
 
 
 Bugs fixed in $NEXT_VERSION
+
+  - Fix for SF bug #1908890: window title not updated.
 
   - Fix for SF bug #1730611: $match_syntax_based is not set.
 
